@@ -1,5 +1,7 @@
 Unreleased
 
+* Fix `NotImplementedError`/`AssertionError` when checking
+  video links with hash anchors (Timo Ludwig, #150)
 * Skip checking of hash anchors for non-html files
 * recheck/ignore/unignore requests were using an obsolete `request.is_ajax` call
   (#147)
